[tool.poetry]
name = "pob_wrapper"
version = "0.1.1"
readme = "README.md"
description = "Wrapper to control Path of Building"
authors = ["coldino <antoranthony.purchase@gmail.com>"]
license = "LGPL-3.0-or-later"
keywords = ['pathofexile','pathofbuilding','pob']
homepage = 'https://github.com/coldino/pob_wrapper/'
packages = [
    { include = "pob_wrapper" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
pywin32 = "^228"

[tool.poetry.dev-dependencies]
rope = "^0.16.0"
yapf = "^0.29.0"
pylint = "^2.4.4"
mypy = "^0.761"
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
prompt_toolkit = "^3.0.7"
pygments = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
